--- a/data/assumptions.yaml
+++ b/data/assumptions.yaml
@@ -1,115 +1,184 @@
 # General parameters
-discountRate: 0.07 # Hurdle factor (%)
-f_steel: 0.07 # Fraction of emmisions coming from steel sector (%)
+nsamples: 50
+nyears: 35
+use_cvar: false
+cvar: 0.05
+MAC_std: 0.000
+E_ref_std: 200
+gamma: 2.0
+# Parameters ADMM algorithm
+rho_ETS: 0.1 # rho ADMM penalty term. Set to 10^6, as ETS prices are in order of 10^6 €/MtCO2
+rho_product: 10
+max_iter: 3000  # maximum number of iterations
+epsilon: 0.1 # stopping criterion
+CircularBufferSize: 2
+pay_back_time: 12
+P_calibration: 80
 
-# Steel decarbonisation routes
-SteelRoutes:
+technologies:
   BF-BOF:
   # Source from https://doi.org/10.1016/j.jclepro.2017.03.162
   # TO DO: find a more specific one
-    Needs: # Needs for one ton of steel
+    CAPEX: 600
+    legacy_capacity: 10000
+    lifetime: 40
+    leadtime: 5
+    OPEX:
       Iron: 1.504 # ton
       Coal: 0.799 # (MWh /ton HRC)
-      EUA: 1.850 # (ton CO2/ ton HRC )
-    Produces: 
-      VirginSteel: 1.0 #ton
+      Hydrogen: 0
+    ETS: 1.850 # (ton CO2/ ton HRC )
 
-  BF-Blend20-BOF:
+  BF-BOF-CC:
+  # Source from 
+  # TO DO: find a more specific one
+    CAPEX: 60
+    legacy_capacity: 0
+    lifetime: 30
+    leadtime: 5
+    OPEX:
+      Iron: 1.68448 # ton # ADD 12% to the iron cost following 10.1016/j.fuel.2022.127074 
+      Coal: 0.89488 # ADD 12% to the coal cost following 10.1016/j.fuel.2022.127074
+      Hydrogen: 0
+    ETS: 0.516 # (ton CO2/ ton HRC ) 10.1016/j.fuel.2022.127074
+
+  BF-BlendH2-BOF:
   # Source from https://doi.org/10.1016/j.jclepro.2017.03.162
-    Needs: # Needs for one ton of steel
-      Iron: 1.504 # ton
-      Coal: 0.639 # (MWh /ton HRC)
-      Hydrogen: 0.9166 # (MWh /ton HRC)
-      #Hydrogen: 0.0275 # ton H2/ ton HRC
-      EUA: 1.480 # (ton CO2/ ton HRC )
-    Produces: 
-      VirginSteel: 1.0 #ton    
+   CAPEX: 60
+   legacy_capacity: 0
+   lifetime: 40
+   leadtime: 5
+   OPEX:
+     Iron: 1.504 # ton
+     Coal: 0.559 # (MWh /ton HRC)
+     Hydrogen: 0.2397 # (MWh /ton HRC)
+   ETS: 1.480 # Expect an 20% reduction  https://doi.org/10.1016/j.jclepro.2017.03.162 
 
-  DirectReduction-EAF:
-  # TO DO: find good source
-    Needs: # Needs for one ton of steel
+  BF-BlendNG-BOF:
+  # Source from https://doi.org/10.1007/s11663-019-01538-8 
+  # TO DO: find a more specific one
+    CAPEX: 60
+    legacy_capacity: 0
+    lifetime: 40
+    leadtime: 5
+    OPEX:
       Iron: 1.504 # ton
-      Coal: 15.6 # (GJ/ton HRC)
-      EUA: 0.970 # (ton CO2/ ton HRC )
-    Produces: 
-      VirginSteel: 1.0 #ton
+      Coal: 0.559 # (MWh /ton HRC)
+      Hydrogen: 0
+      Gas: 0.2397
+    ETS: 1.639
+
+  NGDRI-EAF: 
+  # Direct hydrogen reduction
+  # Numbers from HYBRID Project
+  # Details:  https://www.hybritdevelopment.com/ 
+    CAPEX: 600
+    legacy_capacity: 0
+    lifetime: 30
+    leadtime: 5
+    OPEX:
+      Iron: 1.504 # ton
+      Electricity: 0.816 # (MWh/ton crude steel)
+      Gas: 1.828 # MWh/ ton crude steel
+    ETS: 1.101  # (https://doi.org/10.1016/j.jclepro.2024.140933)
 
   HDRI-EAF: 
   # Direct hydrogen reduction
   # Numbers from HYBRID Project
   # Details:  https://www.hybritdevelopment.com/ 
-  #
-  #
-    Needs: # Needs for one ton of steel
+    CAPEX: 600
+    legacy_capacity: 0
+    lifetime: 30
+    leadtime: 5
+    OPEX:
       Iron: 1.504 # ton
       Coal: 0.042 # (MWh/ton crude steel)
       Electricity: 0.816 # (MWh/ton crude steel)
       Hydrogen: 1.828 # MWh/ ton crude steel
-      EUA: 0.025 # (ton CO2/ ton HRC )
-    Produces: 
-      VirginSteel: 1.0 #ton
+    ETS: 0.000  # (ton CO2/ ton HRC )
 
-  HDRI-EAF-2:
-  # Alternative source Vogl et al.
-  # One that internalizes the hydrogen production
-  # https://doi.org/10.1016/j.jclepro.2018.08.279
-    Needs: 
-      EUA: 0.053 
-      Electricity: 3.48 # (MWh/ton crude steel) # 2/3 of which by the electrolyser
-      Iron: 1.504 # ton
-    Produces: 
-      VirginSteel: 1.0 #ton
+      #HDRI-EAF-2:
+      # Alternative source Vogl et al.
+      # One that internalizes the hydrogen production
+      # https://doi.org/10.1016/j.jclepro.2018.08.279
+        #CAPEX: 100
+        #ETS: 0.053 
+        #Electricity: 3.48 # (MWh/ton crude steel) # 2/3 of which by the electrolyser
+        #Hydrogen: 0
+        #Iron: 1.504 # ton
 
-    HDRI-EAF-Recycle:
-  # Alternative source Vogl et al.
-  # One that internalizes the hydrogen production
-  # https://doi.org/10.1016/j.jclepro.2018.08.279
-    Needs: 
-      EUA: 0.053 
-      Electricity: 3.48 # (MWh/ton crude steel) # 2/3 of which by the electrolyser
-      Iron: 1.504 # ton
-    Produces: 
-      VirginSteel: 1.0 #ton
+      #HDRI-EAF-Recycle:
+      # Alternative source Vogl et al.
+      # One that internalizes the hydrogen production
+      # https://doi.org/10.1016/j.jclepro.2018.08.279
+      #  CAPEX: 100
+      #  ETS: 0.053 
+      #  Electricity: 0.816 # (MWh/ton crude steel) # 2/3 of which by the electrolyser
+      #  Hydrogen: 0
+      #  Scrap: 1.504 # ton
 
-  ETS-Benchmark:
-    Needs:
-      EUA: 1.288 # (ton CO2/ ton HRC )
-      Iron: 1.504 # ton (Vogl et al.)
-      Coal: 0.799 # (MWh /ton HRC)
-
-  # Alternative sources: 
-  # 2000 MWh/ ton steel https://www.sciencedirect.com/science/article/pii/S0959652622009659#b8 
-
-  EAF:
-    Needs:
-      Electricity: 0
-      Scrap: 0.1 #ton
-    Produces:
-      RecycledSteel: 1.0 #ton
-
-HydrogenRoutes:
-# Find a better source
-  Electrolysis:
-    Needs:
-      Electricity: 48 #kWh/kg
-    Produces:
-      Hydrogen: 1.0 #kg
-
-# Commodity price assumptions
-CommodityPrices:
-  EUA: 70 # Emmision Trading System permit price (€/ton CO2)
-  Gas: 30 # Gas price (€/Mwh)
-  Coal: 40 # (€/Mwh)
-  Electricity: 40 # (€/Mwh)
-  Hydrogen: 100 # (€/Mwh)
+commodityPrices:
+  Gas: 40 # Gas price (€/Mwh)
+  Coal: 15 # (€/Mwh)
+  Electricity: 60 # (€/Mwh)
+  Hydrogen: 133 # (€/Mwh)
   Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
-  Scrap: 120 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+  Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
 
-Policies:
-  CCfD: # Carbon contracts for difference
-    Strike: 200 # Emmision Trading System permit price (€/ton CO2)
-    Benchmark: 1.850
+max_em_change: 100
 
+# Parameters ETS - all in MtCO2 or MtCO2/year
+TNAC_THRESHOLD: 1096 # MtCO2 
+TNAC_MAX: 833 # MtCO2 
+TNAC_MIN: 400 # MtCO2 
+X_MSR_MAX_POS_2019: 0.24 # -
+X_MSR_MAX_POS_2023: 0.12 # -
+X_MSR_MAX_NEG_2019: 100 # MtCO2 
+X_MSR_MAX_NEG_2023: 100 # MtCO2 
+P_2019: 24.72 # €/ton or M€/MtCO2  (historical average)
+P_2020: 24.76 # €/ton or M€/MtCO2  (historical average)
+P_2021: 53.50 # €/ton or M€/MtCO2 (historical average)
+P_2022: 80.34
+P_2023: 88.85
+P_2024: 70.0
+P_calibration:  80 # 55.22831224 # €/ton or M€/MtCO2   
+E_2019: 1562.33 #  MtCO2 - emissions in 2019, according to difference between communications to the commission
+E_2020: 1352.492616 #  MtCO2 - emissions in 2020, according to difference between communications to the commission
+E_2021: 1290.418987 #  MtCO2 - emissions in 2021, according to difference between communications to the commission - Note this accounts for impact brexit
+TNAC_2019: 1385.496166 #  MtCO2 - TNAC at end of 2019  
+TNAC_2020: 1578.772426 #  MtCO2 - TNAC at end of 2019  
+TNAC_2021: 1449.214182 #  MtCO2 - TNAC at end of 2019  
+TNAC_2022: 1134.794738
+TNAC_2023: 1111.736535 
+MSR_2019: 1297.124722 #  MtCO2 - MSR at end of 2019  
+MSR_2020: 1924.551469 #  MtCO2 - MSR at end of 2020  
+MSR_2021: 2632.682071 #  MtCO2 - MSR at end of 2021
+MSR_2022:
+MSR_2023:
+S_2019: 2590.076732 #  MtCO2 - 2019
+S_2020: 2173.195623 #  MtCO2 - 2019
+S_2021: 1868.991336 #  MtCO2 - 2019
+
+max_liquidity: 98000 #MEUR
+
+E_ref_maritime: 80 #  MtCO2 - baseline emissions MACC
+E_ind_2019: 598 # Emissions in 2019 - excluding emissions from production of hydrogen, estimated at 100MtCO2 today - https://sandbag.be/index.php/eu-ets-dashboard/ 
+E_ind_2020: 548.6 # Emissions in 2020 - excluding emissions from production of hydrogen, estimated at 100MtCO2 today - https://sandbag.be/index.php/eu-ets-dashboard/ 
+
+E_ind_2021: 512.9 # Emissions in 2021 - excluding emissions from production of hydrogen, estimated at 100MtCO2 today - https://sandbag.be/index.php/eu-ets-dashboard/ 
+
+
+LRF_2024: 4.3
+LRF_2028: 4.4
+CAP_2016: 1969.509072 # Does not include aviation - this number is only relevant for calibration of the MACCss
+CAP_2021_NoGreenDeal: 1596.083007 # Brexit and Aviation included in 2021 cap - https://ec.europa.eu/clima/policies/ets/cap_en
+CAP_2021_GreenDeal: 1635.379448 # Green Deal (inclusion maritime sector), brexit and aviation on 2021 cap.
+CAP_2024: 1386
+CAP_2020: 1816
+S_2017: 1764
+EX_2016: 1693.904897
+B_2016: 900
+UA_2020: 700
 
 # Conversion factors
 GJ-to-MWh: 0.277777778 #GJ to MWH
@@ -123,6 +192,3 @@ Gas:
 Coal: 
   EnergyDensity: 6.666666 # kWh/kg or MWh/ton
 
-
-# Abbriviations
-# HRC = Hot rolled Coil
